// https://docs.gradle.org/current/userguide/application_plugin.html
plugins {
    id 'application'
    // https://docs.gradle.org/current/userguide/building_java_projects.html
    id 'java-library'
}

application {
    mainClass = 'expectusafterlun.ch.jspeak.JSpeak'
    // Use _JAVA_OPTIONS instead
//    applicationDefaultJvmArgs = ['-Dawt.useSystemAAFontSettings=gasp -Dswing.aatext=true --enable-preview']
    mainClass.set("expectusafterlun.ch.jspeak.JSpeak")
}

apply plugin: 'java'
apply plugin: 'jacoco'
apply plugin: 'application'
apply plugin: 'java-library'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(16)
    }
}

version = '1.2.1'

mainClassName = 'expectusafterlun.ch.jspeak.JSpeak'

// Should give the start script a lowercase name
applicationName = 'jspeak'

repositories {
    mavenCentral()
}

dependencies {
    // https://mvnrepository.com/artifact/com.miglayout/miglayout-swing
    implementation group: 'com.miglayout', name: 'miglayout-swing', version: '5.0'
    testImplementation     'junit:junit:4.13'

    // https://www.oreilly.com/library/view/gradle-beyond-the/9781449373801/ch04.html
    // Example 4-12. Declaring dependencies on subprojects
    //compile project(':espeak')
    //compile project(':mbrola')
    compile fileTree(dir: 'setup', include: ['*.exe'])
    compile fileTree(dir: 'setup', include: ['*.zip'])
}

tasks.register('uberJar', Jar) {
    archiveClassifier = 'uber'

    from sourceSets.main.output

    dependsOn configurations.runtimeClasspath
    from {
        configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
    }
}